# streamorph-cpp

./: README.md  TODO-list.txt  meson.build
include/: meson.build
include/core/: gstreamer-interface.h
include/gui/: meson.build  qt-app-wrapper.h  qt-main-thread.h  qt-main-window-widget.h  qt-widgets-container.h  qt-widgets-interface.h
linter/: .requirements.txt  .settings.json  .settings.txt  linter.py  meson.build
src/: main.cpp  meson.build
src/gui/: meson.build  qt-app-wrapper.cpp  qt-main-thread.cpp  qt-main-window-widget.cpp  qt-widgets-container.cpp
src/gui/qt-resources/: meson.build  resources.qrc
src/gui/qt-ui/: main-window.ui  meson.build
src/qt-ui/: main-window.ui
test/: meson.build  test_main.cpp
