# Author: Mohammadreza Bahmanpour
# Copyright 2023 streamorph.live project.
# All rights reserved. Please refer to LICENSE file for more details.

subdir('gui')

inc_dir_system = []
inc_dir_local  = ['.', 'gui', 'core']

inc_dir_list = inc_dir_system + inc_dir_local

inc_dirs = include_directories(inc_dir_list)
