# Author: Mohammadreza Bahmanpour
# Copyright 2023 streamorph.live project.
# All rights reserved. Please refer to LICENSE file for more details.

src_files = ['main.cpp']

deps = []

subdir('gui')

streamorph_bin = executable('streamorph'
                            , sources: src_files
                            , include_directories: inc_dirs
                            , dependencies: deps)
