# Author: Mohammadreza Bahmanpour
# Copyright 2023 streamorph.live project.
# All rights reserved. Please refer to LICENSE file for more details.

test_src_files = ['test_main.cpp']

st = executable('sampletest', sources: test_src_files, dependencies: dependency('gtest_main'))
test('first_test', st)
